solc_mutator_ossfuzz_seed_corpus/test_sol/test_b695277e765d83aed0d8f2c26fb3abc527f60dd23bd32136cb5beaa95e4380ad_f99a5fb4e13407e48ac73465e1d00360cc210dce_sol.sol
==== Source:  ====

==== Source: su0.sol ====
error er0(uint208[2] ep0, int256 ep1);
pragma solidity >= 0.0.0;
function f0(address i0,uint192 i1)     returns(bytes7[] memory o0,int128 o1)
{
  revert(string.concat("ffffffffffffffffffffffffffffffffffffffffffffff82a41714cdbff721cbecbf487efd2741e75a32ec254a6e96089795", "000000000000000000000010e7", string.concat("c34b73ffffffffffffffffffffffffffffff", "11e5206e31539ef089c3cb36", "00000000000000000000000000000000ffffffffffffffffffffffff"), "ffffffffffffffffffffffffffffffffffffad7a"));
  revert("00000000000000000000000000ffffffffffffff");
}
contract C0 {
  bytes13  public s0 = bytes13(0xffffffffffffffffffffffffff);
  address immutable public s1 = address(this);
  bytes10   s2;
  constructor(bytes10 i0)   {
    s2 = bytes10(0x00000000000000000000);
    unchecked {
      (bool l0, bytes memory l1) = payable(this).call{value: 11989649054304518660}("");
      (s0) = (bytes13(0xffffffffffffffffffffffffff));
      do
      {
        (bool l2) = payable(this).send(5466681868513047091);
        (bytes7[] memory l3, int128 l4) = f0(address(this),((uint192(2722588921240776786453722497263286142210898078573487374360) >> uint176((uint176(81053546591998495101450618745118139955693343555833727) ^ (uint176(0) ^ uint176(95780971304118053647396689196894323976171195136475135))))) >> uint104(uint104(15846719918005540290787775168982))));
        for(;
true;
(((uint104(20282409603651670423947251286015) | (~(uint104(0)))) * uint104(15034322160931199312840858155512)) ^ uint104(0)))
        {
          l3[1] |= bytes7(0x00000000000000);
        }
      }
      while (false);
    }
  }
  modifier m0() 
  {
    function (int200, string memory, bytes20) external   returns (string memory) l0;
    _;
  }
  function f1(bytes32 i0) public virtual m0()  returns(int192 o0)
  {
  }
  receive() external  m0() payable
  {
    (bool l0, bytes memory l1) = payable(this).call{value: 7994586262213390984}("");
  }
  struct St0 {
    function (address payable, uint128) external   returns (address payable) el0;
  }
  error er1();
}
enum EN0 {
  M0, M1, M2, M3, M4, M5, M6, M7,
  M8, M9, M10, M11, M12, M13, M14, M15,
  M16, M17, M18, M19, M20, M21, M22, M23,
  M24, M25, M26, M27, M28, M29, M30, M31,
  M32, M33, M34, M35, M36, M37, M38, M39,
  M40, M41, M42, M43, M44, M45, M46, M47,
  M48, M49, M50, M51, M52, M53, M54, M55,
  M56, M57, M58, M59, M60, M61, M62, M63,
  M64, M65, M66, M67, M68, M69, M70, M71,
  M72, M73, M74, M75, M76, M77, M78, M79,
  M80, M81, M82, M83, M84, M85, M86, M87,
  M88, M89, M90, M91, M92, M93, M94, M95,
  M96
}
// ----
// Warning 5740: (su0.sol:492-542): Unreachable code.
// Warning 5740: (su0.sol:1345-1545): Unreachable code.
// Warning 5740: (su0.sol:1567-1572): Unreachable code.
// Warning 5667: (su0.sol:77-87): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:88-98): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:112-130): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:131-140): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 6133: (su0.sol:1357-1479): Statement has no effect.
// Warning 5667: (su0.sol:699-709): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 2072: (su0.sol:780-787): Unused local variable.
// Warning 2072: (su0.sol:789-804): Unused local variable.
// Warning 2072: (su0.sol:941-948): Unused local variable.
// Warning 2072: (su0.sol:1022-1031): Unused local variable.
// Warning 2072: (su0.sol:1820-1827): Unused local variable.
// Warning 2072: (su0.sol:1829-1844): Unused local variable.
// Warning 2018: (su0.sol:65-545): Function state mutability can be restricted to pure
// CodeGenerationError 1284: Some immutables were read from but never assigned, possibly because of optimization.
